feat(pm): implement Stage 2 - Prompt Manager with minijinja
- Add PromptManager with template loading and rendering
- Implement PromptContext with builder pattern
- Add PromptEngine trait for abstraction
- Create prompt-specific error types
- Support for init/plan/execute/review/verification templates
- Include 9 unit tests and 12 doc tests (all passing)
- Full minijinja integration with custom filters

--- a/crates/mpca-pm/Cargo.toml
+++ b/crates/mpca-pm/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2024"
 minijinja = { workspace = true }
 anyhow = { workspace = true }
 serde = { workspace = true }
+thiserror = { workspace = true }
+
+[dev-dependencies]
+tempfile = { workspace = true }
