feat(core): implement Stage 5 - workflow integration
- Implement plan_feature workflow with spec generation
- Implement execute_feature workflow with worktree support
- Add MpcaConfig::load() to parse .mpca/config.toml
- Wire AgentRuntime to call actual workflows (not stubs)
- Add integration test infrastructure
- Fix all clippy warnings (Path vs PathBuf, map_or usage)
- Add Serialize/Deserialize to GitConfig and ReviewConfig

Tests: 46 lib tests passing (up from 39)
Note: 2 tests incomplete (execute worktree creation needs git init mock)
Full Claude agent integration deferred to future work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ ratatui = "0.30.0"
 minijinja = { version = "2.15.1", features = ["loader"] }
 claude-agent-sdk-rs = "0.6.3"
 tempfile = "3.17.0"
+toml = "0.8"
 
 mpca-core = { path = "crates/mpca-core" }
 mpca-pm = { path = "crates/mpca-pm" }
