feat(cli): implement interactive planning TUI with Claude agent integration
- Implement run_planning_tui with full Claude Agent SDK integration
- Add bidirectional streaming communication between UI and agent
- Create interactive chat interface for feature planning
- Add message history tracking with role-based styling
- Implement async architecture with tokio channels
- Add claude-agent-sdk-rs dependency to mpca-cli
- Configure agent with planning-appropriate settings (Sonnet, 20 turns)
- Support graceful error handling and connection failures
- Update UI with chat view, input box, and help screen

This completes the planning workflow implementation according to design.md,
enabling users to have interactive conversations with Claude to create
comprehensive feature specifications including requirements, design, and
implementation plans.

--- a/apps/mpca-cli/Cargo.toml
+++ b/apps/mpca-cli/Cargo.toml
@@ -17,6 +17,8 @@ mpca-core = { workspace = true }
 mpca-pm = { workspace = true }
 tokio = { workspace = true }
 anyhow = { workspace = true }
+claude-agent-sdk-rs = { workspace = true }
+futures = "0.3"
 
 [dev-dependencies]
 tempfile = { workspace = true }
